complete api key page
